--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.btn { 
+  display: flex;
+}
+button { margin: 5px; 
+border: none;
+box-shadow: none;
+padding: 3px 10px;
+border-radius: 15px;
+color: white;
+}
+.nav {
+padding: 20px;
+background-color: rgb(240, 94, 69);
+}
+#iga {
+  font-weight: 800px;
+  color: aliceblue;
+}
+.home{ 
+}
