--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,20 @@ code {
 }
 .btn { 
   display: flex;
+  padding: 5px;
 }
 button { margin: 5px; 
 border: none;
 box-shadow: none;
 padding: 3px 10px;
 border-radius: 15px;
-color: white;
+color: rgb(31, 14, 107);
+}
+.in {
+  padding: 10px;
+}
+.rad {
+  padding: 10px;
 }
 .nav {
 padding: 20px;
@@ -29,5 +36,11 @@ background-color: rgb(240, 94, 69);
   font-weight: 800px;
   color: aliceblue;
 }
-.home{ 
+.home { 
+}
+.drop {
+  padding: 10px;
+}
+.area {
+  padding: 10px;
 }
